--- a/index.html
+++ b/index.html
@@ -2020,7 +2020,7 @@
           <div class="col-lg-5">
             <div class="director_image">
               <img
-                src="images/DSC05194.JPG"
+                src="images/mhmmd.jpg"
                 alt="Dr. Muhammed K.M"
                 class="img-fluid rounded"
               />
