--- a/careers.html
+++ b/careers.html
@@ -880,11 +880,11 @@
                 <li class="nav-item">
                   <a class="nav-link" href="courses.html">Courses</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link" href="index.html#faculty-section"
                     >Faculties</a
                   >
-                </li>
+                </li> -->
                 <li class="nav-item">
                   <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
@@ -1388,7 +1388,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="index.html#about-section">About</a></li>
               <li><a href="courses.html">Courses</a></li>
-              <li><a href="index.html#faculty-section">Faculties</a></li>
+              <!-- <li><a href="index.html#faculty-section">Faculties</a></li> -->
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="careers.html">Careers</a></li>
               <li><a href="index.html#contact-section">Contact</a></li>
