--- a/index.html
+++ b/index.html
@@ -2019,7 +2019,7 @@
           <div class="col-lg-5">
             <div class="director_image">
               <img
-                src="images/mhmmd.jpg"
+                src="images/DSC05194 (1).jpg"
                 alt="Dr. Muhammed K.M"
                 class="img-fluid rounded"
               />
